apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'jdepend'
apply plugin: "jacoco"
apply plugin: 'build-dashboard'
apply plugin: 'maven-publish'

group = 'org.hunter'
version = '0.1.0-PRE'
sourceCompatibility = 1.8

compileJava {
    options.encoding = 'UTF-8'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes 'Implementation-Title': 'skeleton',
                'Implementation-Version': version
    }

    exclude "org/hunter/skeleton/Application.class"
    exclude "application*.yml"
}

javadoc {
    options.encoding = 'UTF-8'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            pom.withXml {
                asNode().remove(asNode().get("dependencies"))
            }
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

compileJava.dependsOn(processResources)

allprojects {
    repositories {
        maven { url 'https://jitpack.io' }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web:2.1.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-aop:2.1.1.RELEASE'

    implementation 'org.springframework.boot:spring-boot-starter-cache:2.1.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.1.1.RELEASE'
    implementation 'com.github.leyan95:pocket:0.1.0-PRE'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'mysql:mysql-connector-java:8.0.13'

    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor:2.1.1.RELEASE")
    testImplementation('org.springframework.boot:spring-boot-starter-test:2.1.1.RELEASE')
}

